# compute-canada-llm-gateway

./: .gitignore  README.md  pyproject.toml  requirements-login.txt  requirements-vllm.txt
config/: nodes.example.yaml
docs/: ALLIANCE_CLUSTER_GUIDE.md  ALLIANCE_WIKI_NOTE_DRAFT.md  KIMI_K26_RUNBOOK.md
packaging/opencv_python_headless_stub/: pyproject.toml
packaging/opencv_python_headless_stub/opencv_python_headless_stub_meta/: __init__.py
scripts/: cc_run_gateway.py  cc_submit_vllm.py
scripts/diagnostics/: canary-battery.py  judge-canary.py  ptx_jit_repro.py
scripts/multinode/: build-env.sh  estimate-gpus.py  materialize-model.sh  patch-vllm-dp-timeouts.sh  serve-vllm-multinode.sbatch  site.example.env  stage-model.sh
scripts/multinode/profiles/: kimi-k2.6.env  qwen3-32b.example.env
src/cc_llm_gateway/: __init__.py  __main__.py  alliance_paths.py  anthropic_routes.py  anthropic_translate.py  auth.py  config.py  main.py  openai_proxy.py  schemas.py
templates/: vllm_sbatch.sh.j2
tests/: conftest.py  test_alliance_paths.py  test_anthropic_translate.py  test_gateway.py
